--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <html>
 <meta charset="UTF-8"> 
 <head>
-    <script type="text/javascript" src="test.js"></script>
+    <script type="text/javascript" src="oo-prototypal-inheritance.js"></script>
 </head>
 <title></title>
 
